--- a/aplicacionGps/src/main/webapp/indexPrincipal/Index.html
+++ b/aplicacionGps/src/main/webapp/indexPrincipal/Index.html
@@ -198,7 +198,7 @@ $(document).ready(function(){
         </div>
         <div class="card">
             <img src="../images/img2.jpg">
-            <b>Gps Onlinw</b>
+            <b>Gps Online</b>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, excepturi unde?</p>
             <a href="#">Leer más</a>
         </div>
@@ -210,7 +210,7 @@ $(document).ready(function(){
         </div> 
     </div>
 </div>
-<div class="servivcios" id="servicios">	
+<div class="servicios" id="servicios">	
 <div>
 <iframe  width="100%" height="660px" src="service.html" scrolling="no" frameborder="no" ></iframe>
 </div>
